--- a/src/policies/PPO/indipendent_PPO_v2.ipynb
+++ b/src/policies/PPO/indipendent_PPO_v2.ipynb
@@ -411,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "0ffbf61b",
    "metadata": {},
    "outputs": [
@@ -447,14 +447,13 @@
     "        policies={\"shared_policy\"},\n",
     "        policy_mapping_fn=lambda agent_id, *args, **kwargs: \"shared_policy\",\n",
     "    )\n",
-    "    .env_runners(num_env_runners=1)  # tienilo a 1 per ora\n",
+    "    .env_runners(num_env_runners=1) \n",
     "    .training(\n",
     "        lr=2e-4,\n",
     "        train_batch_size_per_learner=2000,\n",
     "        num_epochs=10,\n",
     "    )\n",
     "    .api_stack(\n",
-    "        # IMPORTANTE: Disabilita tutto il nuovo stack per tornare alla stabilità\n",
     "        enable_rl_module_and_learner=False,\n",
     "        enable_env_runner_and_connector_v2=False\n",
     "    )\n",
