pomdp with updated observation space, training with self play strict and loose with the pomdp (1 replica only)

--- a/src/policies/PPO/env_6_mdp/indipendent_strictplay_2agents_dense.ipynb
+++ b/src/policies/PPO/env_6_mdp/indipendent_strictplay_2agents_dense.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "125ef575",
    "metadata": {},
    "outputs": [],
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "8b94dc31",
    "metadata": {},
    "outputs": [
@@ -32,7 +32,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Project dir found: /home/terra/Desktop/unimore/distributed_project\n"
+      "Project dir found: /home/terra/Desktop/magistrale/distributed_ai_project\n"
      ]
     }
    ],
@@ -44,7 +44,7 @@
     "pointed_dir = current_dir\n",
     "\n",
     "while True:\n",
-    "    if pointed_dir.is_dir() and \"distributed_project\" == str(pointed_dir).split(\"/\")[-1]:\n",
+    "    if pointed_dir.is_dir() and \"distributed_ai_project\" == str(pointed_dir).split(\"/\")[-1]:\n",
     "        project_dir = pointed_dir\n",
     "        print(f\"Project dir found: {project_dir}\")\n",
     "        break\n",
@@ -58,19 +58,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "f2a20e09",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/terra/anaconda3/envs/MARL/lib/python3.10/site-packages/pygame/pkgdata.py:25: UserWarning: pkg_resources is deprecated as an API. See https://setuptools.pypa.io/en/latest/pkg_resources.html. The pkg_resources package is slated for removal as early as 2025-11-30. Refrain from using this package or pin to Setuptools<81.\n",
-      "  from pkg_resources import resource_stream, resource_exists\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "import functools\n",
@@ -463,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "e5fd6c17",
    "metadata": {},
    "outputs": [],
@@ -572,52 +563,27 @@
   },
   {
    "cell_type": "markdown",
-   "id": "656291d9",
+   "id": "f3c42204",
    "metadata": {},
    "source": [
-    "## **Wandb - One run of training**"
+    "## **Save the agents model**"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d700e9b4",
+   "id": "d6356fa4",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import wandb\n",
-    "#wandb.init(project=\"gridworld_looseplay_2agents\", name=\"densereward\")\n",
-    "ppo = config.build_algo()\n",
-    "num_total_episodes = 0\n",
-    "for i in range(50):\n",
-    "    result = ppo.train()\n",
-    "    num_total_episodes += result['env_runners']['num_episodes']\n",
-    "    \n",
-    "    print(f\"ITERATION {i}, num episode {num_total_episodes}\".center(100,\"-\"))\n",
-    "    train_rew = round(result['env_runners']['episode_return_mean'], 2)\n",
-    "    train_steps_episode = round(result['env_runners']['episode_len_mean'], 2)\n",
-    "    train_success_rate = round(result['env_runners']['custom_metrics'].get('success_rate_mean', 0), 2) * 100\n",
-    "    print(f\"\"\"TRAINING\\nRew:{train_rew} \\nSteps per episode:{train_steps_episode} \\nSuccess rate:{train_success_rate}%\\n\"\"\")\n",
+    "import os\n",
+    "def save_model(ppo, file_name):\n",
+    "    current_dir = os.getcwd()\n",
+    "    model_dir = os.path.join(current_dir, \"models\")\n",
+    "    checkpoint_name = os.path.join(model_dir, file_name)\n",
+    "    ppo.save(checkpoint_name)\n",
     "\n",
-    "    if 'evaluation' in result:\n",
-    "        testing_rew = round(result['evaluation']['env_runners']['episode_return_mean'], 2)\n",
-    "        testing_steps_episode = round(result['evaluation']['env_runners']['episode_len_mean'], 2)\n",
-    "        testing_success_rate = round(result['evaluation']['env_runners']['custom_metrics'].get('success_rate_mean', 0), 2) * 100\n",
-    "        print(f\"\"\"TESTING\\nRew:{testing_rew} \\nSteps per episode:{testing_steps_episode} \\nSuccess rate:{testing_success_rate}%\\n\\n\"\"\")\n",
-    "\n",
-    "    log_data = {\n",
-    "        \"Episodes\": num_total_episodes,\n",
-    "\n",
-    "        \"Training_steps_per_episode\": train_steps_episode,\n",
-    "        \"Training_success_rate_per_episode\": train_success_rate,\n",
-    "        \"Training_reward_per_episode\": train_rew,\n",
-    "\n",
-    "        \"Testing_steps_per_episode\": testing_steps_episode,\n",
-    "        \"Testing_success_rate_per_episode\": testing_success_rate,\n",
-    "        \"Testing_reward_per_episode\": testing_rew\n",
-    "    }\n",
-    "    #wandb.log(log_data)\n",
-    "#wandb.finish()"
+    "    print(f\"Model saved into {checkpoint_name}\")"
    ]
   },
   {
@@ -3044,31 +3010,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8ec15527",
-   "metadata": {},
-   "source": [
-    "## **Save the agents model**"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "cd783a1f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import os\n",
-    "def save_model(ppo, file_name):\n",
-    "    current_dir = os.getcwd()\n",
-    "    model_dir = os.path.join(current_dir, \"models\")\n",
-    "    checkpoint_name = os.path.join(model_dir, file_name)\n",
-    "    ppo.save(checkpoint_name)\n",
-    "\n",
-    "    print(f\"Model saved into {checkpoint_name}\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "8a3738be",
    "metadata": {},
    "source": [
@@ -3077,7 +3018,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "id": "fc2029a9",
    "metadata": {},
    "outputs": [],
@@ -3089,17 +3030,24 @@
     "    current_dir = os.getcwd()\n",
     "    model_dir = os.path.join(current_dir, \"models\")\n",
     "    checkpoint_name = os.path.join(model_dir, file_name)\n",
-    "\n",
+    "    print(checkpoint_name)\n",
     "    ppo = PPO.from_checkpoint(checkpoint_name)\n",
     "    return ppo"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "id": "401b6626",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/home/terra/Desktop/magistrale/distributed_ai_project/src/policies/PPO/env_6_mdp/models/best_strictplay_2agents_densereward_run_3\n"
+     ]
+    },
     {
      "name": "stderr",
      "output_type": "stream",
@@ -3116,15 +3064,10 @@
       "/home/terra/anaconda3/envs/MARL/lib/python3.10/site-packages/ray/tune/logger/unified.py:53: RayDeprecationWarning: This API is deprecated and may be removed in future Ray releases. You could suppress this warning by setting env variable PYTHONWARNINGS=\"ignore::DeprecationWarning\"\n",
       "The `TBXLogger interface is deprecated in favor of the `ray.tune.tensorboardx.TBXLoggerCallback` interface and will be removed in Ray 2.7.\n",
       "  self._loggers.append(cls(self.config, self.logdir, self.trial))\n",
-      "/home/terra/anaconda3/envs/MARL/lib/python3.10/site-packages/google/api_core/_python_version_support.py:266: FutureWarning: You are using a Python version (3.10.19) which Google will stop supporting in new releases of google.api_core once it reaches its end of life (2026-10-04). Please upgrade to the latest Python version, or at least Python 3.11, to continue receiving updates for google.api_core past that date.\n",
-      "  warnings.warn(message, FutureWarning)\n",
-      "2025-12-28 14:16:05,378\tINFO worker.py:2007 -- Started a local Ray instance.\n",
-      "/home/terra/anaconda3/envs/MARL/lib/python3.10/site-packages/ray/_private/worker.py:2046: FutureWarning: Tip: In future versions of Ray, Ray will no longer override accelerator visible devices env var if num_gpus=0 or num_gpus=None (default). To enable this behavior and turn off this error message, set RAY_ACCEL_ENV_VAR_OVERRIDE_ON_ZERO=0\n",
-      "  warnings.warn(\n",
-      "[2025-12-28 14:16:07,931 E 3911624 3911624] core_worker.cc:2223: Actor with class name: 'RolloutWorker' and ID: '33e682ba53b9110f0b4b266401000000' has constructor arguments in the object store and max_restarts > 0. If the arguments in the object store go out of scope or are lost, the actor restart will fail. See https://github.com/ray-project/ray/issues/53727 for more details.\n",
-      "\u001b[36m(RolloutWorker pid=3911857)\u001b[0m /home/terra/anaconda3/envs/MARL/lib/python3.10/site-packages/pygame/pkgdata.py:25: UserWarning: pkg_resources is deprecated as an API. See https://setuptools.pypa.io/en/latest/pkg_resources.html. The pkg_resources package is slated for removal as early as 2025-11-30. Refrain from using this package or pin to Setuptools<81.\n",
-      "\u001b[36m(RolloutWorker pid=3911857)\u001b[0m   from pkg_resources import resource_stream, resource_exists\n",
-      "2025-12-28 14:16:11,448\tWARNING util.py:61 -- Install gputil for GPU system monitoring.\n"
+      "\u001b[36m(RolloutWorker pid=49749)\u001b[0m /home/terra/anaconda3/envs/MARL/lib/python3.10/site-packages/pygame/pkgdata.py:25: UserWarning: pkg_resources is deprecated as an API. See https://setuptools.pypa.io/en/latest/pkg_resources.html. The pkg_resources package is slated for removal as early as 2025-11-30. Refrain from using this package or pin to Setuptools<81.\n",
+      "\u001b[36m(RolloutWorker pid=49749)\u001b[0m   from pkg_resources import resource_stream, resource_exists\n",
+      "\u001b[36m(pid=49750)\u001b[0m [2026-01-05 18:55:06,707 E 49750 50289] core_worker_process.cc:842: Failed to establish connection to the metrics exporter agent. Metrics will not be exported. Exporter agent status: RpcError: Running out of retries to initialize the metrics agent. rpc_code: 14\u001b[32m [repeated 11x across cluster] (Ray deduplicates logs by default. Set RAY_DEDUP_LOGS=0 to disable log deduplication, or see https://docs.ray.io/en/master/ray-observability/user-guides/configure-logging.html#log-deduplication for more options.)\u001b[0m\n",
+      "2026-01-05 19:05:34,354\tWARNING util.py:61 -- Install gputil for GPU system monitoring.\n"
      ]
     }
    ],
@@ -3153,7 +3096,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "28ae26d8",
    "metadata": {},
    "outputs": [
@@ -3161,25 +3104,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "WARNING! Sprite image /home/terra/Desktop/unimore/distributed_project/sprites/.png not found. Using default sprite for this simulation.\n",
-      "WARNING! Sprite image /home/terra/Desktop/unimore/distributed_project/sprites/.png not found. Using default sprite for this simulation.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2025-12-28 14:16:15,011\tWARNING 2186136998.py:10 -- DeprecationWarning: `compute_single_action` has been deprecated. `Algorithm.compute_single_action` should no longer be used. Get the RLModule instance through `Algorithm.get_module([module ID])`, then compute actions through `RLModule.forward_inference({'obs': [obs batch]})`. This will raise an error in the future!\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\u001b[36m(pid=gcs_server)\u001b[0m [2025-12-28 14:16:34,343 E 3911688 3911688] (gcs_server) gcs_server.cc:303: Failed to establish connection to the event+metrics exporter agent. Events and metrics will not be exported. Exporter agent status: RpcError: Running out of retries to initialize the metrics agent. rpc_code: 14\n",
-      "\u001b[33m(raylet)\u001b[0m [2025-12-28 14:16:35,321 E 3911802 3911802] (raylet) main.cc:1032: Failed to establish connection to the metrics exporter agent. Metrics will not be exported. Exporter agent status: RpcError: Running out of retries to initialize the metrics agent. rpc_code: 14\n",
-      "\u001b[36m(RolloutWorker pid=3911857)\u001b[0m [2025-12-28 14:16:36,334 E 3911857 3911994] core_worker_process.cc:842: Failed to establish connection to the metrics exporter agent. Metrics will not be exported. Exporter agent status: RpcError: Running out of retries to initialize the metrics agent. rpc_code: 14\n",
-      "[2025-12-28 14:16:36,834 E 3911624 3911855] core_worker_process.cc:842: Failed to establish connection to the metrics exporter agent. Metrics will not be exported. Exporter agent status: RpcError: Running out of retries to initialize the metrics agent. rpc_code: 14\n"
+      "WARNING! Sprite image /home/terra/Desktop/magistrale/distributed_ai_project/sprites/.png not found. Using default sprite for this simulation.\n",
+      "WARNING! Sprite image /home/terra/Desktop/magistrale/distributed_ai_project/sprites/.png not found. Using default sprite for this simulation.\n"
      ]
     }
    ],
