--- a/src/policies/PPO/env_7_pomdp_radius2/indipendent_strictplay_4agents_dense.ipynb
+++ b/src/policies/PPO/env_7_pomdp_radius2/indipendent_strictplay_4agents_dense.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "id": "125ef575",
    "metadata": {},
    "outputs": [],
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "id": "8b94dc31",
    "metadata": {},
    "outputs": [
@@ -58,10 +58,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "id": "f2a20e09",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/terra/anaconda3/envs/MARL/lib/python3.10/site-packages/pygame/pkgdata.py:25: UserWarning: pkg_resources is deprecated as an API. See https://setuptools.pypa.io/en/latest/pkg_resources.html. The pkg_resources package is slated for removal as early as 2025-11-30. Refrain from using this package or pin to Setuptools<81.\n",
+      "  from pkg_resources import resource_stream, resource_exists\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import functools\n",
@@ -552,7 +561,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "id": "e5fd6c17",
    "metadata": {},
    "outputs": [],
@@ -777,7 +786,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "id": "fc2029a9",
    "metadata": {},
    "outputs": [],
@@ -795,7 +804,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 7,
    "id": "59369442",
    "metadata": {},
    "outputs": [
@@ -815,10 +824,17 @@
       "/home/terra/anaconda3/envs/MARL/lib/python3.10/site-packages/ray/tune/logger/unified.py:53: RayDeprecationWarning: This API is deprecated and may be removed in future Ray releases. You could suppress this warning by setting env variable PYTHONWARNINGS=\"ignore::DeprecationWarning\"\n",
       "The `TBXLogger interface is deprecated in favor of the `ray.tune.tensorboardx.TBXLoggerCallback` interface and will be removed in Ray 2.7.\n",
       "  self._loggers.append(cls(self.config, self.logdir, self.trial))\n",
-      "\u001b[36m(RolloutWorker pid=265935)\u001b[0m /home/terra/anaconda3/envs/MARL/lib/python3.10/site-packages/pygame/pkgdata.py:25: UserWarning: pkg_resources is deprecated as an API. See https://setuptools.pypa.io/en/latest/pkg_resources.html. The pkg_resources package is slated for removal as early as 2025-11-30. Refrain from using this package or pin to Setuptools<81.\n",
-      "\u001b[36m(RolloutWorker pid=265935)\u001b[0m   from pkg_resources import resource_stream, resource_exists\n",
-      "2026-01-07 01:45:34,631\tWARNING util.py:61 -- Install gputil for GPU system monitoring.\n",
-      "\u001b[36m(RolloutWorker pid=265935)\u001b[0m DeprecationWarning: `ray.rllib.models.torch.recurrent_net.RecurrentNetwork` has been deprecated. This will raise an error in the future!\n"
+      "/home/terra/anaconda3/envs/MARL/lib/python3.10/site-packages/google/api_core/_python_version_support.py:266: FutureWarning: You are using a Python version (3.10.19) which Google will stop supporting in new releases of google.api_core once it reaches its end of life (2026-10-04). Please upgrade to the latest Python version, or at least Python 3.11, to continue receiving updates for google.api_core past that date.\n",
+      "  warnings.warn(message, FutureWarning)\n",
+      "2026-01-08 10:38:26,817\tINFO worker.py:2007 -- Started a local Ray instance.\n",
+      "/home/terra/anaconda3/envs/MARL/lib/python3.10/site-packages/ray/_private/worker.py:2046: FutureWarning: Tip: In future versions of Ray, Ray will no longer override accelerator visible devices env var if num_gpus=0 or num_gpus=None (default). To enable this behavior and turn off this error message, set RAY_ACCEL_ENV_VAR_OVERRIDE_ON_ZERO=0\n",
+      "  warnings.warn(\n",
+      "2026-01-08 10:38:29,177\tWARNING recurrent_net.py:85 -- DeprecationWarning: `ray.rllib.models.torch.recurrent_net.RecurrentNetwork` has been deprecated. This will raise an error in the future!\n",
+      "[2026-01-08 10:38:29,303 E 7815 7815] core_worker.cc:2223: Actor with class name: 'RolloutWorker' and ID: '5d2a91632ed4067903ae9c3801000000' has constructor arguments in the object store and max_restarts > 0. If the arguments in the object store go out of scope or are lost, the actor restart will fail. See https://github.com/ray-project/ray/issues/53727 for more details.\n",
+      "\u001b[36m(RolloutWorker pid=8055)\u001b[0m /home/terra/anaconda3/envs/MARL/lib/python3.10/site-packages/pygame/pkgdata.py:25: UserWarning: pkg_resources is deprecated as an API. See https://setuptools.pypa.io/en/latest/pkg_resources.html. The pkg_resources package is slated for removal as early as 2025-11-30. Refrain from using this package or pin to Setuptools<81.\n",
+      "\u001b[36m(RolloutWorker pid=8055)\u001b[0m   from pkg_resources import resource_stream, resource_exists\n",
+      "2026-01-08 10:38:33,067\tWARNING util.py:61 -- Install gputil for GPU system monitoring.\n",
+      "\u001b[36m(RolloutWorker pid=8055)\u001b[0m DeprecationWarning: `ray.rllib.models.torch.recurrent_net.RecurrentNetwork` has been deprecated. This will raise an error in the future!\n"
      ]
     }
    ],
@@ -847,7 +863,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 8,
    "id": "28da8e2d",
    "metadata": {},
    "outputs": [
@@ -860,7 +876,23 @@
       "WARNING! Sprite image /home/terra/Desktop/magistrale/distributed_ai_project/sprites/.png not found. Using default sprite for this simulation.\n",
       "WARNING! Sprite image /home/terra/Desktop/magistrale/distributed_ai_project/sprites/.png not found. Using default sprite for this simulation.\n",
       "✓ Success\n",
-      "✓ Success\n",
+      "✓ Success\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[36m(pid=gcs_server)\u001b[0m [2026-01-08 10:38:55,640 E 7875 7875] (gcs_server) gcs_server.cc:303: Failed to establish connection to the event+metrics exporter agent. Events and metrics will not be exported. Exporter agent status: RpcError: Running out of retries to initialize the metrics agent. rpc_code: 14\n",
+      "\u001b[33m(raylet)\u001b[0m [2026-01-08 10:38:56,781 E 7990 7990] (raylet) main.cc:1032: Failed to establish connection to the metrics exporter agent. Metrics will not be exported. Exporter agent status: RpcError: Running out of retries to initialize the metrics agent. rpc_code: 14\n",
+      "\u001b[36m(RolloutWorker pid=8055)\u001b[0m [2026-01-08 10:38:57,538 E 8055 8205] core_worker_process.cc:842: Failed to establish connection to the metrics exporter agent. Metrics will not be exported. Exporter agent status: RpcError: Running out of retries to initialize the metrics agent. rpc_code: 14\n",
+      "[2026-01-08 10:38:57,760 E 7815 8043] core_worker_process.cc:842: Failed to establish connection to the metrics exporter agent. Metrics will not be exported. Exporter agent status: RpcError: Running out of retries to initialize the metrics agent. rpc_code: 14\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "✓ Success\n",
       "\n",
       "==================================================\n",
@@ -948,6 +980,14 @@
     "print(f\"Success rate: {successes}/{num_episodes} = {successes/num_episodes*100:.1f}%\")\n",
     "print(f\"{'='*50}\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5b231cc5",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
